[package]
name = "reno"
version = "0.1.0"
authors = ["Matias Insaurralde <matias@insaurral.de>"]
description = "Hacky implementation of Deno in Rust"
repository = "https://github.com/matiasinsaurralde/reno"
readme = "README.md"
license = "MIT"
build = "build.rs"

[dependencies]
lazy_static = "1.0"
bytes = "0.4"
v8worker2 = { git = "https://github.com/matiasinsaurralde/rust-v8worker2" }
prost = "0.4.0"
prost-derive = "0.4.0"
prost-types = "0.4.0"
getopts = "0.2"
capnp = "0.8"

[build-dependencies]
prost-build = "0.4.0"
capnpc = "0.8"

[profile.dev]
opt-level = 0
debug = true
